# tacc-resume-builder

./: .env.example  .gitignore  PROMPT_FOR_LLM.md  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  constants.py  docx_styles.py  exporters.py  extractors.py  generators.py  llm.py  models.py  processors.py  schema.py  workflows.py
templates/: classic.html  creative.html  minimalist.html  modern.html
tests/: test_integration.py  test_services.py
